--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   <body class="u-body u-image" style="background-position: 50% 50%; background-image: url(&quot;images/image.png&quot;);"><header class="u-clearfix u-header u-header" id="sec-f163"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
     <section class="u-clearfix u-section-1" id="sec-760c">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-default u-image-1" src="images/1_wUOrpv-selJOytCkslSIhg.png" alt="" data-image-width="534" data-image-height="247">
+        <img class="u-image u-image-default u-image-1" src="BCYAYAY14.github.io/images/1_wUOrpv-selJOytCkslSIhg.png" alt="" data-image-width="534" data-image-height="247">
         <h4 class="u-custom-font u-font-oswald u-text u-text-1">We could not find the page you requested</h4>
         <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-button-style u-custom-font u-font-oswald u-none u-text-active-grey-70 u-text-grey-90 u-text-hover-palette-1-dark-2 u-btn-1">BACK TO HOME</a>
       </div>
