--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+
+<head>
+    <title>BCYAYAY</title>
+    <meta name="description" content="BCYAYAY">
+    <meta name="author" content= "BCYAYAY">
+    <link rel="icon" href="https://i.ibb.co/8bjQT7C/favicon-32x32.png">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+ <p>
+     Test
+ </p>
 </body>
+
 </html>
