--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html>
 
 <head>
-    <title>BCYAYAY</title>
-    <meta name="description" content="BCYAYAY">
-    <meta name="author" content= "BCYAYAY">
+    <title>BC-Penguin</title>
+    <meta name="description" content="Official website of BCYAYAY otherwise known as BCYAYAY14.">
+    <meta name="author" content="BCYAYAY">
+    <meta charset="utf-8">
     <link rel="icon" href="https://i.ibb.co/8bjQT7C/favicon-32x32.png">
+    <meta property="og:title" content="Site Title" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://penguin.is-a.dev" />
+    <meta property="og:image" content="https://i.ibb.co/8bjQT7C/favicon-32x32.png" />
+    <meta property="og:description" content="Official website of BCYAYAY otherwise known as BCYAYAY14." />
+    <meta name="theme-color" content="#000080">
+
 </head>
 
 <body>
- <p>
-     Test
- </p>
+    <p>
+        Test
+    </p>
 </body>
 
 </html>
