--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="BCYAYAY">
     <meta charset="utf-8">
     <link rel="icon" href="https://i.ibb.co/8bjQT7C/favicon-32x32.png">
-    <meta property="og:title" content="Site Title" />
+    <meta property="og:title" content="BC-Penguin" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://penguin.is-a.dev" />
     <meta property="og:image" content="https://i.ibb.co/8bjQT7C/favicon-32x32.png" />
