--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BC-Penguin</title>
+    <title>404 | BC-Penguin</title>
     <meta name="description" content="Official website of BCYAYAY otherwise known as BCYAYAY14.">
     <meta name="author" content="BCYAYAY">
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://i.ibb.co/8bjQT7C/favicon-32x32.png" />
     <meta property="og:description" content="Official website of BCYAYAY otherwise known as BCYAYAY14." />
     <meta name="theme-color" content="#000080">
-    <link rel="stylesheet" href="css/root/main.css">
+    <link rel="stylesheet" href="css/404/main.css">
 
 </head>
 <body>
@@ -25,12 +25,12 @@
             <img id="mobile-exit" class="mobile-menu-exit" src="images/exit.svg" alt="Close Navigation Menu">
 
             <ul class="primary-nav">
-                <li class="home"> <a href="#">Home</a> </li>
+                <li class="home"> <a href="./index.html#">Home</a> </li>
                 <li> <a href="#">About</a> </li>
             </ul>
 
             <ul class="secondary-nav">
-                <li class="contact"> <a href="#contact-container">Contact</a> </li>
+                <li class="contact"> <a href="./index.html#">Contact</a> </li>
             </ul>
         </nav>
     </div>
@@ -38,52 +38,9 @@
 
 <section class="hero">
     <div class="container">
-        <div class="left-col">
-            <p class="subhead">Penguins are cool</p>
-            <h1>BC-Penguin</h1>
-
-            <div class="hero-cta">
-                <a href="#" class="primary-cta">
-                    More Info
-                </a>
-            </div>
-        </div>
-
-        <img src="images/pfp.png" class="hero-img"alt="Penguin PFP">
-    </div>
-</section>
-
-<section class="features-section">
-    <div class="container">
-        <ul class="features-list">
-            <li>Developer</li>
-            <li>Gamer</li>
-            <li>And much more</li>
-        
-        </ul>
-    </div>
-</section>
-
-<section class="contact-section">
-    <div id="contact-container">
-    <div class="container">
-        <div class="contact-left">
-            <h2>Contact</h2>
-            <form action="mailto:br14n.universe@gmail.com" method="post" enctype="text/plain">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Your name">
-
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your email">
-                
-                <label for="message">Message</label>
-               <textarea name="message" id="message" cols="30" rows="10" placeholder="A short message"></textarea>
-
-               <input type="submit" class="send-message-cta" value="Send message ">
-            </form>
-        </div>
-    </div>
-    </div>  
+        <img id="pixelated-404" class="pixelated-404" src="images/pixel.png" >
+        <h2>404 - Page not found</h2>
+         </div>
 </section>
 
     <script>
