Created beta site

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://i.ibb.co/8bjQT7C/favicon-32x32.png" />
     <meta property="og:description" content="Official website of BCYAYAY otherwise known as BCYAYAY14." />
     <meta name="theme-color" content="#000080">
-    <link rel="stylesheet" href="css/404/main.css">
+    <link rel="stylesheet" href="404.css">
 
 </head>
 <body>
