--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+
     <title>BC-Penguin</title>
     <meta name="description" content="Official website of BCYAYAY otherwise known as BCYAYAY14.">
     <meta name="author" content="BCYAYAY">
@@ -13,16 +16,16 @@
     <meta property="og:image" content="https://i.ibb.co/8bjQT7C/favicon-32x32.png" />
     <meta property="og:description" content="Official website of BCYAYAY otherwise known as BCYAYAY14." />
     <meta name="theme-color" content="#000080">
-    <link rel="stylesheet" href="css/root/main.css">
+    <link rel="stylesheet" href="home.css">
 
 </head>
 <body>
 <div class="navbar">
     <div class="container">
         <a href="#" class="logo">BC-<span>Penguin</span></a>
-        <img id="mobile-cta" class="mobile-nav" src="images/menu.svg" alt="Open Navigation Menu">
+        <img id="mobile-cta" class="mobile-nav" src="images/menu.png" alt="Open Navigation Menu">
         <nav>
-            <img id="mobile-exit" class="mobile-menu-exit" src="images/exit.svg" alt="Close Navigation Menu">
+            <img id="mobile-exit" class="mobile-menu-exit" src="images/exit.png" alt="Close Navigation Menu">
 
             <ul class="primary-nav">
                 <li class="home"> <a href="#">Home</a> </li>
@@ -46,8 +49,8 @@
             <h1>BC-Penguin</h1>
 
             <div class="hero-cta">
-                <a href="#" class="primary-cta">
-                    More Info
+                <a href="./beta/index.html" class="primary-cta">
+                    View Beta Site
                 </a>
             </div>
         </div>
@@ -72,7 +75,7 @@
     <div class="container">
         <div class="contact-left">
             <h2>Contact</h2>
-            <form action="mailto:br14n.universe@gmail.com" method="post" enctype="text/plain">
+            <form action="./index.js" method="post">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your name">
 
@@ -82,7 +85,7 @@
                 <label for="message">Message</label>
                <textarea name="message" id="message" cols="30" rows="10" placeholder="A short message"></textarea>
 
-               <input type="submit" class="send-message-cta" value="Send message ">
+               <input type="submit" class="send-message-cta" id="send-message" value="Send message ">
             </form>
         </div>
     </div>
@@ -112,5 +115,7 @@
             document.body.classList.toggle('dark-mode')
         })
     </script>
+    
+   
 </body>
 </html>
