--- a/github/index.html
+++ b/github/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-        <p style="font-family: Poppins, sans-serif;"></p>You are going to be redirected!
-    
+        <h1 style="font-family: Poppins, sans-serif;"></h1>You are going to be redirected!
+        <p><a href="https://github.com/BCYAYAY14">Are you not being redirected? Click this</a></p>
 </body>
 </html>
