--- a/beta/index.html
+++ b/beta/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <style>
+        
+    </style>
     <div class="hero-img"></div>
     <div class="container">
         <header>
