--- a/404.html
+++ b/404.html
@@ -229,7 +229,7 @@ nav li a:hover {
 
 <section class="hero">
     <div class="container">
-        <img id="pixelated-404" class="pixelated-404" src="images/pixel.png" >
+        <img id="pixelated-404" class="pixelated-404" src="https://penguin.is-a.dev/images/pixel.png" >
         <h2>404 - Page not found</h2>
          </div>
 </section>
